<resources>
    <string name="app_name">Agenda</string>
    <string name="campo_nome">Nome</string>
    <string name="campo_endereco">Endereço</string>
    <string name="campo_telefone">Telefone</string>
    <string name="campo_site">Site</string>
    <string name="campo_foto">Foto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
