<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >
    <LinearLayout android:id="@+id/activity_formulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="225dp">
            <ImageView android:id="@+id/formulario_foto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#02a9ec"
                android:src="@drawable/person"
                android:contentDescription="@string/campo_foto"/>
            <Button android:id="@+id/formulario_btn_foto"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/fundo_camera"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:elevation="6dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <EditText android:id="@+id/formulario_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_nome"/>
        <EditText android:id="@+id/formulario_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_endereco"/>
        <EditText android:id="@+id/formulario_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_telefone"/>
        <EditText android:id="@+id/formulario_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_site"/>
        <RatingBar android:id="@+id/formulario_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:max="10"
            android:layout_gravity="center"
            />
    </LinearLayout>
</ScrollView>